[project]
name = "hearing-aid-project"
version = "0.1.0"
description = "ML pipeline for synthetic longitudinal hearing-aid log data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tslearn>=0.8.1",
]
